Fixes blurred area passing to shader

--- a/css/controlbar.css
+++ b/css/controlbar.css
@@ -10,7 +10,7 @@ html, body {
     top: 0;
     position: fixed;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0);
     color: #F0F0F0;
 }
 
